Add grounded compound mission variation
